utilities.css
.item-removal-confirmation__container {
  margin-top: 6.6%;
  height: max-content;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  row-gap: 18%;
}

.item-removal-confirmation__container h2 {
  font-size: 1.1rem;
  width: 150px;
  height: 100%;
  text-wrap: balance;
  text-align: center;
  opacity: 0;
  transition: opacity 0.4s ease;
  /*! margin-top: 20%; */
  /*! outline: 1px solid green; */
}

.item-removal-confirmation__container h2.active {
  opacity: 1;
  transition-timing-function: ease-in;
}

.item-removal-confirmation__container button {
  opacity: 0;
  transition: opacity 0.4s ease;
  margin-bottom: 21px;
}

.item-removal-confirmation__container button.active {
  opacity: 1;
  transition-timing-function: ease-in;
}

/* PAGINATION (ADVANCED) */
.pagination-advanced__container {
  width: 100%;
  height: 10vh;
  background-color: rgb(168, 168, 168);
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 0 0 auto;
}

.pagination-advanced__content {
  width: 30%;
  height: 80%;
  background-color: rgb(255, 255, 255);
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 0 0 auto;
}

.pagination-advanced__button-content {
  width: 50%;
  height: 80%;
  background-color: rgb(129, 255, 245);
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1%;
  flex: 0 0 auto;
}

.pagination-advanced__button-middle {
  width: 18.5%;
  height: 51.8%;
  background-color: rgb(129, 255, 245);
  flex: 0 0 auto;
}

.pagination-advanced__button-middle.active {
  background-color: green;
}

/* COLLAPSIBLE */
.collapsible-btn {
  all: unset;
  width: 100%;
  text-align: left;
  font-weight: normal;
  cursor: pointer;
  background: none;
  border: none;
  outline: none;
  margin-bottom: 1.1%;
  display: flex;
  align-items: center;
  font-size: var(--p-main);
}

.collapsible-content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.4s ease;
}

.collapsible-content p {
  margin: 0.5rem 0;
  margin-top: 5%;
}

.collapsible-content ul {
  list-style-type: disc;
  padding-left: 1.5rem;
  margin: 0.5rem 0;
  margin-top: 8.9%;
}

/* SEPARATOR */
.horizontal-separator__bg {
  width: 100%;
  height: 1vh;
  background-color: #fff;
  display: flex;
  justify-content: center;
}

footer .horizontal-separator__bg {
  width:89.4%;
}

.horizontal-separator {
  width: 100%;
  height: 1px;
  background: #000;
  transform: scaleY(0.5);        
  transform-origin: top;
}

